# Flint

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh.md  components.json  eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.web.json  vite.config.ts
plugins/stats/: main.ts  plugin.toml
plugins/stock/: main.ts  plugin.toml
resources/agents/: debugger.md
resources/commands/: agents.md  commit.md
resources/embeddings/embeddinggemma-300m/: tokenizer_config.json
resources/plugins/: runtime.js  stats.flp  stock.flp
resources/presets/: azure-openai.toml  bigmodel-coding.toml  bigmodel.toml  moonshot-coding.toml  moonshot.toml  openrouter.toml  qwen-coding.toml  siliconflow.toml  together.toml  xiaomi-coding.toml  xiaomi.toml
scripts/: build-plugins.mjs  build.mjs  check.mjs  copy-resources.mjs  dist.mjs  download-provider-icons.mjs  predev.mjs  sync-version.mjs
src/: App.tsx  env.d.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/embeddings/embeddinggemma-300m/: config.json
src-tauri/resources/embeddings/embeddinggemma-300m/onnx/: model.onnx
src-tauri/resources/plugins/: runtime.js  stats.flp  stock.flp
src-tauri/resources/presets/: anthropic.toml  baidu-coding.toml  baidu.toml  deepseek.toml  google.toml  groq.toml  minimax.toml  mistral.toml  ollama.toml  openai.toml  qwen.toml  xai.toml
src-tauri/src/: git.rs  http_client.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/commands/: desktop.rs  document.rs  fs.rs  image.rs  mod.rs  process.rs  reader.rs  terminal.rs  types.rs  utils.rs
src-tauri/src/commands/search/: filter.rs  glob.rs  grep.rs  mod.rs  output.rs  walker.rs
src-tauri/src/memory/: commands.rs  manager.rs  mod.rs  search.rs  storage.rs  types.rs
src-tauri/src/plugin/: commands.rs  flp.rs  manager.rs  mod.rs  types.rs
src-tauri/src/preset/: manager.rs  mod.rs  types.rs
src-tauri/tests/: preset_validation.rs
src/assets/: main.css  typeset.css
src/components/: error-boundary.tsx
src/components/animate-ui/: transitions.tsx
src/components/chat/: AgentErrorCard.tsx  AskUserQuestionCard.tsx  AssistantMessage.tsx  CodeDiffViewer.tsx  ImagePreview.tsx  (+16 more)
src/hooks/: use-auto-scroll.ts  use-chat-actions.ts  use-composer-attachments.ts  use-composer-draft.ts  use-composer-images.ts  use-estimated-tokens.ts  use-image-display-src.ts  use-manual-compression.ts  use-streaming-stall.ts  use-typewriter.ts
src/lib/: chat-route.ts  debug-store.ts  localized-string.ts  logger.ts  todo-utils.ts  utils.ts
src/locales/: index.ts
src/protocols/: agent-stream-protocol.ts  anthropic-tool-replay.ts  live-tool-input-summary.ts  memory-types.ts  team-runtime-types.ts
src/services/: notifications.ts
src/stores/: agent-store.ts  chat-store.ts  inbox-store.ts  input-draft-store.ts  plan-store.ts  plugin-message-router.ts  plugin-store.ts  provider-store.ts  settings-store.ts  skills-store.ts  team-store.ts  todo-store.ts  ui-store.ts
(+317 files in other folders)
